--- a/components/About.module.css
+++ b/components/About.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color:#bdd1ec;
 }
 
 
@@ -12,9 +13,11 @@
     font-size: larger;
     font-weight: bold;
     padding-left: 15px;
+    color:#bdd1ec;
 }
 
 .text {
     font-size: medium;
+    color:#bdd1ec; 
 }
 
