--- a/components/Projects.module.css
+++ b/components/Projects.module.css
@@ -1,15 +1,20 @@
 .title {
     margin-top: 15px;
+    margin-bottom: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     font-size: larger;
     font-weight: bold;
     padding-left: 15px;
+    color:#bdd1ec;
 }
 
 .subtitle {
-    margin-top: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    font-size: medium;
+    font-size: 14px;
     font-weight: bold;
     padding-left: 15px;
+    color:#bdd1ec;
+    padding-bottom: 0;
+
 }
+
